--- a/solution/Msh/Msh.WebApp/Views/_ViewImports.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Msh.WebApp
 @using Msh.WebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Msh.WebApp.TagHelpers.*, Msh.WebApp
