WebApp - Update Views

--- a/solution/Msh/Msh.WebApp/Views/Admin/CoinCorner/Config.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/CoinCorner/Config.cshtml
@@ -19,7 +19,7 @@
 <div class="row">
 	<div class="col-6">
 
-		<form asp-action="ConfigEdit">
+		<form asp-action="ConfigSave">
 
 			<div class="form-group mb-3">
 				<label asp-for="UserId" class="control-label">User ID <info-icon name="info-user-id"/></label>
