--- a/solution/Msh/Msh.WebApp/Views/Admin/Dev/Index.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Dev/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
 	ViewData["Title"] = "Admin Dev Page";
-	await Html.RenderPartialAsync("Admin/Menus/_DevIndex", "DevIndex");
+	await Html.RenderPartialAsync("Admin/Menus/_AdminMenuDev", "DevIndex");
 }
 
 <div class="text-center">
