--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/Menus/_AdminMenuCoinCorner.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/Menus/_AdminMenuCoinCorner.cshtml
@@ -8,7 +8,8 @@
 	// Model is the name of the menu item. Set the corresponding menu item Active property
 	var list = AdminVmService.SetActiveItem(@Model, [
 		new AdminMenuItem { Name = "CcIndex", Controller = "CoinCorner", Action = "Index", Text = "Coin Corner Home" },
-		new AdminMenuItem { Name = "CcConfig", Controller = "CoinCorner", Action = "Config", Text = "CC Config" }
+		new AdminMenuItem { Name = "CcConfig", Controller = "CoinCorner", Action = "Config", Text = "CC Config" },
+		new AdminMenuItem { Name = "CcConfig", Controller = "CoinCorner", Action = "Global", Text = "CC Global" }
 	]);
 	// 
 	await Html.RenderPartialAsync("Admin/Menus/_AdminMenus", list);
