--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/HotelList.cshtml
@@ -51,7 +51,7 @@
 </div>
 <div class="row">
 	<div class="col-12">
-		<button id="add-hotel" class="btn btn-primary" onclick="window.location = 'HotelAdd'; return false;">Add Hotel</button>
+		<button id="add-hotel" class="btn btn-primary" onclick="window.mshMethods.addHotel()">Add Hotel</button>
 	</div>
 </div>
 
@@ -59,4 +59,6 @@
 	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-hotels.js"></script>
 }
+
+
 
