--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminPublish.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminPublish.cshtml
@@ -4,7 +4,7 @@
 	<span>Publish</span>
 	<div>
 		<p>This page is used to edit <b>@Model</b> Admin data stored in the database.</p>
-		<p>The data is also held in a memory cache for quicker access.</p>
+		<p>The data is also held in a memory cache for faster access.</p>
 		<p>After making changes, click Publish to refresh the cache from the latest database information.</p>
 	</div>
 </div>
