WebApp - Add css for error block

--- a/solution/Msh/Msh.WebApp/wwwroot/css/site.css
+++ b/solution/Msh/Msh.WebApp/wwwroot/css/site.css
@@ -154,3 +154,14 @@ table {
 .right-align {
     text-align: right;
 }
+
+.error-block {
+    display:none;
+}
+.error-block-show {
+    display: block;
+}
+
+.error-block-show .error-message {
+    color: red;
+}
