--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/Menus/_AdminMenuHotels.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/Menus/_AdminMenuHotels.cshtml
@@ -8,7 +8,8 @@
 	// Model is the name of the menu item. Set the corresponding menu item Active property
 	var list = AdminVmService.SetActiveItem(@Model, [
 		new AdminMenuItem { Name = "HotelsIndex", Controller = "Hotels", Action = "Index", Text = "Hotels Home" },
-		new AdminMenuItem { Name = "HotelList", Controller = "Hotels", Action = "HotelList", Text = "Hotel List" }
+		new AdminMenuItem { Name = "HotelList", Controller = "Hotels", Action = "HotelList", Text = "Hotel List" },
+		new AdminMenuItem { Name = "RoomTypeList", Controller = "Hotels", Action = "RoomTypeList", Text = "Room Type List" }
 	]);
 	// 
 	await Html.RenderPartialAsync("Admin/Menus/_AdminMenus", list);
