--- a/solution/Msh/Msh.WebApp/Views/Admin/Dev/Index.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Dev/Index.cshtml
@@ -5,7 +5,9 @@
 
 <div class="text-center">
 	<h1 class="display-4">Dev</h1>
-	
+	<a href="https://localhost:7150/admin/hotels">Hotels</a><br/>
+	<a href="https://localhost:7150/admin/payments/coincorner">Coin Corner</a><br />
+	<a href="https://localhost:7150/admin/dev">Dev</a><br />
 
 </div>
 
