--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/RoomTypeList.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/RoomTypeList.cshtml
@@ -52,20 +52,19 @@
 
 	</div>
 </div>
-<div class="row">
+<div class="row py-3">
 	<div class="col-12">
 		<button id="add-hotel" class="btn btn-primary" onclick="window.mshMethods.addRoomType()">Add Room Type</button>
 	</div>
 </div>
 
 <div id="page-info" style="display:none;">
-
-<div data-info-for="info-hotel-code">
-	<span>Hotel</span>
-	<div>
-		<p>Select a hotel to view Room Types for that hotel</p>
+	<div data-info-for="info-hotel-code">
+		<span>Hotel</span>
+		<div>
+			<p>Select a hotel to view Room Types for that hotel</p>
+		</div>
 	</div>
-</div>
 </div>
 
 @{
