--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/Menus/_AdminMenus.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/Menus/_AdminMenus.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@using Msh.Admin.Models
 
-@model List<AdminMenuItem>
+@model List<Msh.Admin.Models.ViewModels.AdminMenuItem>
 
 <div class="row">
 	<div class="col-12">
