--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/HotelList.cshtml
@@ -49,7 +49,7 @@
 
 	</div>
 </div>
-<div class="row">
+<div class="row py-3">
 	<div class="col-12">
 		<button id="add-hotel" class="btn btn-primary" onclick="window.mshMethods.addHotel()">Add Hotel</button>
 		
